<package>
  <name>schunk_svh</name>
  <version>0.1.2</version>
  <description>ROS1 specific packages for the Schunk SVH five finger hand</description>

  <author email="scherzin@fzi.de">Stefan Scherzinger</author>
  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>
  <maintainer email="Harry.Arnst@de.schunk.com">Harry Arnst</maintainer>

  <license>GPL-3.0-or-later</license>
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/schunk_svh_ros_driver</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>schunk_svh_driver</run_depend>
  <run_depend>schunk_svh_description</run_depend>
  <run_depend>schunk_svh_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
