<?xml version="1.0"?>
<package format="2">
  <name>schunk_svh_description</name>
  <version>0.0.0</version>
  <description>The schunk_svh_description package</description>

  <maintainer email="keller@fzi.de">Philip Keller</maintainer>


  <license>GPL-3.0-or-later</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
