<?xml version="1.0"?>
<?xml-model
href="http://download.ros.org/schema/package_format3.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
        <name>schunk_svh_description</name>
        <version>2.0.1</version>
        <description>Kinematic and visual descriptions of the Schunk SVH</description>
        <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>
        <license>GPL-3.0-or-later</license>

        <buildtool_depend>ament_cmake</buildtool_depend>

        <test_depend>ament_lint_auto</test_depend>
        <test_depend>ament_lint_common</test_depend>

        <export>
                <build_type>ament_cmake</build_type>
        </export>
</package>
