<?xml version="1.0"?>
<?xml-model
href="http://download.ros.org/schema/package_format3.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
        <name>schunk_svh_driver</name>
        <version>0.0.0</version>
        <description>ROS2-control system interface for the Schunk SVH</description>
        <maintainer email="scherzin@fzi.de">user</maintainer>
        <license>Apache License 2.0</license>

        <buildtool_depend>ament_cmake</buildtool_depend>

        <depend>hardware_interface</depend>
        <depend>pluginlib</depend>
        <depend>rclcpp</depend>
        <depend>schunk_svh_library</depend>
        <exec_depend>schunk_svh_description</exec_depend>

        <test_depend>ament_lint_auto</test_depend>
        <!--<test_depend>ament_lint_common</test_depend>-->

        <export>
                <build_type>ament_cmake</build_type>
        </export>
</package>
