<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>schunk_svh_driver</name>
  <version>0.0.1</version>
  <description>ROS1 driver for the Schunk SVH five finger hand</description>

  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>

  <license>GPL-3.0-or-later</license>

  <url>http://www.ros.org/wiki/schunk_svh_driver</url>

  <author email="heppner@fzi.de">Georg Heppner</author>
  <author email="exner@fzi.de">Felix Exner</author>
  <author email="pbecker@fzi.de">Pascal Becker</author>
  <author email="mangler@fzi.de">Johannes Mangler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>combined_robot_hw</depend>
  <depend>controller_manager</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>schunk_svh_description</depend>
  <depend>schunk_svh_msgs</depend>
  <depend>schunk_svh_library</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <!--rosdoc config="etc/rosdoc.yaml" />-->
    <hardware_interface plugin="${prefix}/robot_hw_plugin.xml"/>
  </export>

</package>
